<?xml version="1.0"?>
<package format="2">
  <name>move_to_pose_msg</name>
  <version>0.0.0</version>
  <description>The move_to_pose_msg package</description>
  <maintainer email="txphuc02071999@gmail.com">txphuc2799</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
